--- a/static/assets/styles/markdown.css
+++ b/static/assets/styles/markdown.css
@@ -459,3 +459,10 @@ caption {
   background-color: var(--c-gray-2);
   font-weight: 500;
 }
+
+.md .block {
+  border: 1px solid var(--c-warning);
+  padding: 8px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+}
